--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>Inicio</title>
+		<title>Index</title>
 		<meta charset="UTF-8" />
 	</head>
 	<body>
-		<h1>Hola Spring!</h1>
+		<h1 th:text="${title}">Hi Spring!</h1>
 	</body>
 </html>
