Changing index and IndexController

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,6 @@
 	<body>
 		<h1 th:text="${title}">Hi Spring!</h1>
 		<a th:href="@{/user}">User Info</a>
+		<a th:href="@{/user/list}">Users List</a>
 	</body>
 </html>
