Improving User Info

--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<h1 th:text="${title}">User</h1>
-		<span th:text="${user.firstName}" />
 		<br />
-		<span th:text="${user.lastName}" />
+		<span th:if="${user.email}" th:text="'Email: ' + ${user.email}"></span>
+		<span th:if="${user.email == null}" th:text="'Email: No informado'"></span>
 	</body>
 </html>
