--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -8,6 +8,6 @@
 		<h1 th:text="${title}">User</h1>
 		<br />
 		<span th:if="${user.email}" th:text="'Email: ' + ${user.email}"></span>
-		<span th:if="${user.email == null}" th:text="'Email: No informado'"></span>
+		<span th:if="${user.email == null}" th:text="'Email: Unknown'"></span>
 	</body>
 </html>
